[tool.poetry]
name = "neural_style_transfer"
version = "0.1.0"
description = "Implementing some example neural style transfer algorithms for images."
authors = ["Łukasz Sawaniewski <l.sawaniewski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.1"
torchvision = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
